<resources>
    <string name="app_name">Synology Photo Viewer</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="fill_all_fields">Fill all fields!</string>
    <string name="account_or_password_wrong">No such account or incorrect password</string>
    <string name="account_disabled">Account disabled</string>
    <string name="permission_denied">Permission denied</string>
    <string name="two_step_login">2-step verification code</string>
    <string name="set_this_folder">set this\nfolder</string>
    <string name="gallery_name">Gallery name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="set_gallery_name">Set gallery name</string>
    <string name="insert_name">Insert name!</string>
    <string name="add_gallery">Add gallery</string>
    <string name="existing_connections">Existing connections</string>
    <string name="no_success_response">No success response</string>
    <string name="error_code">Error code</string>
    <string name="error">Error!</string>
    <string name="parent_folder">parent folder</string>
    <string name="new_login_required">New login required</string>
    <string name="con_params_changed_error">Did you change your connection settings? Like password, user or address?</string>
    <string name="port">Port (optional)</string>
    <string name="use_https">Use https</string>
    <string name="album">Album</string>
    <string name="loading">Loading…</string>
    <string name="timeoutException">Timeout exception</string>
    <string name="show_picture_info_in_fullscreen_view">Show picture info in fullscreen view</string>
    <string name="presentation_timeout_in_seconds">Presentation timeout in seconds</string>
    <string name="active_galleries_click_one_for_remove_it">Active galleries. Click one for remove it.</string>
    <string name="settings">Settings</string>
    <string name="remove_gallery_title">Remove gallery</string>
    <string name="remove_gallery_message">Are you sure to remove this gallery from your collection?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="db_mode_description">DB mode. Cache all your remote galleries structure locally. It is more faster when you load you galleries and folders, but require a first scan.</string>
    <string name="of">of</string>
    <string name="gallery_sync_progress">Galleries scan in progress…</string>
    <string name="completed">Completed</string>
    <string name="daily_scan_message">Perform a daily scan of your galleries. Valid only in DB mode</string>
    <string name="album_folders_updated">Album folders updated!</string>
    <string name="album_picture_updated">Album pictures updated!</string>
</resources>