<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@android:color/black"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/remove_gallery_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:layout_marginTop="10dp"
        android:text="@string/remove_gallery_message"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/yes"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewMessage"
        app:layout_constraintRight_toLeftOf="@id/buttonYes"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/no"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>