<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@android:color/black"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/set_gallery_name"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextGalleryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:layout_marginTop="10dp"
        android:hint="@string/gallery_name"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:inputType="textCapSentences"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextGalleryName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/add"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextGalleryName"
        app:layout_constraintRight_toLeftOf="@id/buttonAdd"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>