<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activities.addGallery.AddShareActivity">

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/address"
        android:lines="1"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/editTextAddress"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:lines="1"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/editTextAddress"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:hint="@string/password"
        android:lines="1"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/editTextAddress"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:hint="@string/port"
        android:lines="1"
        android:inputType="number"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/checkboxHttps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPort"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/editTextAddress"
        android:layout_marginTop="10dp"
        android:nextFocusRight="@id/buttonLogin"
        android:checked="true"
        android:text="@string/use_https"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:nextFocusLeft="@id/checkboxHttps"
        app:layout_constraintTop_toTopOf="@id/checkboxHttps"
        app:layout_constraintRight_toRightOf="@id/checkboxHttps"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewExConnections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/editTextPort"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:text="@string/existing_connections"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewConnections"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/editTextPort"
        app:layout_constraintRight_toRightOf="@id/editTextPort"
        app:layout_constraintTop_toBottomOf="@id/textViewExConnections"
        app:layout_constraintBottom_toTopOf="@id/buttonSetActualFolder"/>

    <Button
        android:id="@+id/buttonSetActualFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/recyclerViewConnections"
        app:layout_constraintRight_toRightOf="@id/recyclerViewConnections"
        android:enabled="false"
        android:text="@string/set_this_folder"/>

    <ProgressBar
        android:id="@+id/progressLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/editTextAddress"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        app:layout_constraintLeft_toRightOf="@id/editTextAddress"
        app:layout_constraintRight_toRightOf="parent" >

        <TextView
            android:id="@+id/textViewPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFolders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingBottom="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>