<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="15dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkboxShowPictureInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/layoutPresentationTimeout"
                app:layout_constraintBottom_toBottomOf="@id/layoutPresentationTimeout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintWidth_percent="0.48"
                android:text="@string/show_picture_info_in_fullscreen_view"/>

            <LinearLayout
                android:id="@+id/layoutPresentationTimeout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.48">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/presentation_timeout_in_seconds"/>

                <EditText
                    android:id="@+id/editTextPresentationTimeout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:inputType="number"
                    android:importantForAutofill="no"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewGalleriesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layoutPresentationTimeout"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/active_galleries_click_one_for_remove_it"/>

            <com.botty.tvrecyclerview.TvRecyclerView
                android:id="@+id/recyclerViewGalleries"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textViewGalleriesList"
                app:layout_constraintBottom_toBottomOf="parent"
                app:scrollMode="followScroll"
                app:focusScale="1"
                app:focusDrawable="@drawable/folders_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>